--- a/src/styles/style.scss
+++ b/src/styles/style.scss
@@ -15,85 +15,11 @@ body {
   color: var(--text-color);
 }
 
-.cube__container {
-  width: 200px;
-  height: 200px;
-  perspective: 500px;
-  position: fixed;
-  top: 50%;
-  left: 50%;
-  transform: translate(-50%, -50%);
-  z-index: 2;
-}
 
-.cube {
-  position: relative;
-  width: 200px;
-  height: 200px;
-  transform-style: preserve-3d;
-  transform: rotateX(-45deg) rotateY(-45deg) rotateZ(0deg);
-}
-
-.face {
-  width: 200px;
-  height: 200px;
-  background: skyblue;
-  border: 2px solid black;
-  position: absolute;
-  opacity: 0.9;
-  display: flex;
-  align-items: center;
-  justify-content: center;
-  font-family: Arial, sans-serif;
-  font-size: 2rem;
-}
-
-.front {
-  transform: translateZ(100px);
-}
-
-.back {
-  transform: translateZ(-100px) rotateY(180deg);
-}
-
-.left {
-  transform: translateX(-100px) rotateY(-90deg);
-}
-
-.right {
-  transform: translateX(100px) rotateY(90deg);
-}
-
-.top {
-  transform: translateY(-100px) rotateX(90deg);
-}
-
-.bottom {
-  transform: translateY(100px) rotateX(-90deg);
-}
 
 .level {
   position: relative;
   height: 100vh;
-
-  &__background::after,
-  &__background::before {
-    content: '';
-    position: absolute;
-    left: 0;
-    right: 0;
-    height: 30%;
-  }
-
-  &__background::after {
-    bottom: 0;
-    background: linear-gradient(180deg, transparent, var(--bg-color));
-  }
-
-  &__background::before {
-    top: 0;
-    background: linear-gradient(0deg, transparent, var(--bg-color));
-  }
 
   &__background,
   &__content {
@@ -107,6 +33,25 @@ body {
   &__background {
     background-size: cover;
     background-position: center;
+
+    &::after,
+    &::before {
+      content: '';
+      position: absolute;
+      left: 0;
+      right: 0;
+      height: 30%;
+    }
+
+    &::after {
+      bottom: 0;
+      background: linear-gradient(180deg, transparent, var(--bg-color));
+    }
+
+    &::before {
+      top: 0;
+      background: linear-gradient(0deg, transparent, var(--bg-color));
+    }
 
     &--1 {
       background-image: url('images/l1.jpg');
@@ -129,6 +74,12 @@ body {
     display: flex;
     align-items: center;
     justify-content: center;
+
+    &::after {
+      background-size: cover;
+      background-position: center;
+      background-image: url('images/Rectangle.svg');
+    }
   }
 }
 
