--- a/src/index.scss
+++ b/src/index.scss
@@ -1,3 +1,4 @@
 @import './styles/reset.css';
-@import './styles/style';
-@import './styles/cube'
+// @import './styles/style';
+// @import './styles/cube'
+@import './styles/gsap3'
