--- a/src/styles/gsap3.scss
+++ b/src/styles/gsap3.scss
@@ -52,9 +52,10 @@
     top: 20%;
   }
 
-  a {
+  button {
     display: inline-block;
     background: #b100f2;
+    border-color: #b100f2;
     color: white;
     font-weight: bold;
     text-transform: uppercase;
@@ -62,7 +63,7 @@
     padding: 1em;
   }
 
-  .swipeUpAnim {
+  .swipeUp {
     position: absolute;
     left: 0;
     width: 100%;
