split examples into "home" and "scroll", added a menu animation(WIP)

--- a/src/pages/gsap3.scss
+++ b/src/pages/gsap3.scss
@@ -39,7 +39,7 @@
   }
 
   aside {
-    background: url('images/windows.jpg');
+    background: url('../images/windows.jpg');
     background-size: cover;
     background-repeat: no-repeat;
     height: 100vh;
