--- a/src/pages/scroll-example.scss
+++ b/src/pages/scroll-example.scss
@@ -1,22 +1,3 @@
-:root {
-  --bg-color: rgb(50 50 50);
-  --text-color: rgb(250 250 250);
-  --active-color: rgb(40 201 35);
-}
-
-html,
-body {
-  padding: 0;
-  margin: 0;
-}
-
-body {
-  background-color: var(--bg-color);
-  color: var(--text-color);
-}
-
-
-
 .level {
   position: relative;
   height: 100vh;
@@ -54,19 +35,19 @@ body {
     }
 
     &--1 {
-      background-image: url('images/l1.jpg');
+      background-image: url('../images/l1.jpg');
     }
 
     &--2 {
-      background-image: url('images/l2.jpg');
+      background-image: url('../images/l2.jpg');
     }
 
     &--3 {
-      background-image: url('images/l3.jpg');
+      background-image: url('../images/l3.jpg');
     }
 
     &--4 {
-      background-image: url('images/l4.jpg');
+      background-image: url('../images/l4.jpg');
     }
   }
 
@@ -78,13 +59,8 @@ body {
     &::after {
       background-size: cover;
       background-position: center;
-      background-image: url('images/Rectangle.svg');
+      background-image: url('../images/Rectangle.svg');
     }
   }
 }
 
-.properties {
-  position: fixed;
-  top: 1rem;
-  left: 1rem;
-}
