--- a/src/components/scroller.scss
+++ b/src/components/scroller.scss
@@ -1,7 +1,7 @@
 .properties {
   position: fixed;
   bottom: 1rem;
-  left: 1rem;
-  background: rgba(0,0,0,.3);
+  left: rem;
+  background: rgb(0 0 0 / 30%);
   min-width:250px;
 }
