--- a/src/pages/gsap3.scss
+++ b/src/pages/gsap3.scss
@@ -68,7 +68,7 @@
     left: 0;
     width: 100%;
     height: 100%;
-    background: white;
+    background: var(--bg-color);
     z-index: 1;
     transform-origin: 100% 0;
   }
